syntax = "proto3";
package worksApi;
option go_package = "proto;worksApi";
service WorksApi{
	rpc FindAll(Request)	returns(Response);
}
message Pair{
	string key = 1;
	repeated string value = 2;
}
message Request{
	string method = 1;
	string path = 2;
	map<string,Pair> header = 3;
	map<string,Pair> get = 4;
	map<string,Pair> post = 5;
	string body = 6;
	string url = 7;
}
message Response{
	int32 statusCode = 1;
	map<string,Pair> header = 2;//返回键值
	string body = 3;
}